--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -10,8 +10,12 @@
      @apply mb-0;
 }
 
+article.x\:container {
+     @apply py-0
+}
+
 /* Override for full-width pages */
-.article-container>article.x\:container:has(.full-width-content) {
+article.x\:container:has(.full-width-content) {
      @apply max-w-none;
 }
 
